style.css
@import url('https://fonts.googleapis.com/css?family=Poppins');

html {
  font-size: 10px;
  background: url('./background.jpg') bottom center;
  background-size: cover;
}

body,html {
  margin: 0;
  padding: 0;
  font-family:'Poppins', Arial, sans-serif;
  font-weight: 700;
  display: flex;
  flex-direction: column;
}

body {
  opacity: 1;
  transition-duration: 1s;
  transition-property: opacity;
}

body.fade {
  opacity: 0;
}

.keys {
  display: flex;
  flex: 1;
  flex-wrap: wrap;
  min-height: 100vh;
  align-items: center;
  justify-content: center;
}

.key {
  border: .3rem solid white;
  border-radius: 3rem;
  margin: 1rem;
  font-size: 1.5rem;
  padding: 1rem .5rem;
  transition: all .07s ease;
  width: 10rem;
  text-align: center;
  color: white;
  background: rgba(0, 0, 0, 0.7);
  text-shadow: 0 0 .5rem orangered;
}

.playing {
  transform: scale(1.1);
  border-color: orangered;
  box-shadow: 0 0 2rem orangered;
}

kbd {
  display: block;
  font-size: 4rem;
}

.sound {
  font-size: 1.2rem;
  text-transform: uppercase;
  letter-spacing: .1rem;
  color: #ffc600;
}

h1,
h2 {
  text-align: center;
  margin: 0;
  letter-spacing: .5rem;
}

h1 {
  font-size: 7rem;
  text-transform: uppercase;
  color: white;
  text-shadow: 0 0 .7rem orangered;
}

h2 {
  color: orangered;
}

